public/stylesheets/style.css
/* lightbox and list-view style */
* {
  margin: 0px;
  padding: 0px;
  outline: none;
  font-family: Arial, Helvetica, sans-serif !important;
}
p {
  color: #000000;
  font-size: 13px;
  font-family: Arial, Helvetica, sans-serif !important;
}
p span.shift-lft {
  padding-left: 15px;
}
a {
  text-decoration: none;
  font: Arial, Helvetica, sans-serif !important;
  font-size: 14px !important;
}
a img {
  border: none;
}
.clear {
  clear: both;
}
.lft {
  float: left;
  font: Arial, Helvetica, sans-serif !important;
  font-size: 15px !important;
  padding: 0px;
  margin: 0px;
}
.lft-fit {
  float: left;
}
.gap5lft {
  padding-left: 5px;
}
.small-link {
  text-decoration: underline;
  font-size: 12px !important;
}
.mov-up {
  margin-top: -5px;
}
.mid-holder {
  margin: 0 auto;
  width: 954px;
}

.spc8 {
  width: 100%;
  height: 9px;
  float: left;
}
.spc28 {
  width: 100%;
  height: 11px;
  float: left;
}
.big-text-box {
  height: 140px;
  width: 270px;
  font: Arial, Helvetica, sans-serif !important;
  font-size: 13px !important;
  border: #ffffff solid 1px !important;
  overflow: hidden;
  float: left;
  text-align: left;
  padding: 5px;
}
.big-size {
  font: Arial, Helvetica, sans-serif;
  font-size: 24px!important;
  font-weight: bold !important;
}
#box-hide {
  position: absolute;
  z-index: 9999;
  width: 287px;
  height: 100px;
  background: url(../images/hide_.png) repeat;
  visibility: visible;
  padding-top: 47px;
}
.lightbox-wrapper {
  width: 365px;
  height: 260px;
  margin: 0 auto;
  margin-top: 20px;
}
.lightbox-wrapper .top-line {
  width: 365px;
  height: 8px;
  background: #777643;
}
.lightbox-wrapper .top-line .top-rt {
  width: 9px;
  height: 8px;
  background: #777643 url(../images/rt-top.gif) top right;
  float: right;
}
.lightbox-wrapper .mid-rep {
  width: 305px;
  height: auto;
  overflow: hidden;
  border-left: #777643 solid 10px;
  border-right: #777643 solid 10px;
  padding: 7px 20px 7px 20px;
}
.lightbox-wrapper .mid-rep .box-ar {
  width: 287px;
  height: auto;
  overflow: hidden;
  padding-left: 10px;
  padding-right: 10px;
  float: left;
  padding-bottom: 3px;
}
.lightbox-wrapper .mid-rep .box-ar .box-text {
  width: 100%;
  margin: 0 auto;
  border: #000000 solid 1px;
  height: 152px;
  margin: 0px;
  padding: 0px;
}
.lightbox-wrapper .mid-rep .box-ar .box-text p {
  padding-left: 0px;
  padding-bottom: 20px;
  padding-top: 5px;
  text-align: left;
}

.lightbox-wrapper .bot-line {
  width: 365px;
  height: 8px;
  background: #777643;
}
.lightbox-wrapper .bot-line .bot-rt {
  width: 9px;
  height: 8px;
  background: #777643 url(../images/rt-bot.gif) top right;
  float: right;
}


/*Checkbox*/
.checkbox {
  width: 19px;
  height: 25px;
  padding: 0 5px 0 0;
  background: url(../images/checkbox.gif) no-repeat;
  display: block;
  clear: left;
  float: left;
}

/* Round Corners Button */
.lbbutton {
  border: #000000 solid 0px;
  margin: 0px;
  padding: 0px;
}
.lbbutton li {
  display: inline;
  list-style: none;
  padding-right: 0px;
  border: #000000 solid 0px;
  padding-bottom: 5px;
}

.lbbutton li a {
  background: transparent url(../images/buttonleft_ro.jpg) no-repeat left top;
  color: #fff;
  padding: 1px 0 7px 27px;
}
.lbbutton li a span {
  background: transparent url(../images/buttonright_ro.jpg) no-repeat right top;
  color: #fff;
  padding: 1px 35px 7px 10px;
}

/*strip page start*/
.top-wrapper {
  width: 940px;
  height: auto;
  overflow: hidden;
  padding-bottom: 5px;
  float: left;
  padding: 4px;
}
.day-button {
  border: #000000 solid 0px;
}
.day-button li {
  display: inline;
  list-style: none;
  padding-right: 0px;
  padding-bottom: 5px;
}

.day-button li a {
  background: transparent url(../images/day-lft.jpg) no-repeat left;
  color: #2e6278;
  height: 25px;
  font-size: 11px !important;
  font-weight: bold;
  padding: 7px 0 7px 0px;
}
.day-button li a span {
  background: transparent url(../images/day-rt.jpg) no-repeat center right;
  color: #2e6278;
  padding: 7px 13px 7px 10px;
}


.day1-button {
  border: #000000 solid 0px;
}
.day1-button li {
  display: inline;
  list-style: none;
  padding-right: 0px;
  padding-bottom: 5px;
}

.day1-button li a {
  background: transparent url(../images/day-lft.jpg) no-repeat left;
  color: #2e6278;
  height: 25px;
  font-size: 11px !important;
  font-weight: bold;
  padding: 7px 0 7px 0px;
}
.day1-button li a span {
  background: transparent url(../images/day-rt.jpg) no-repeat center right;
  color: #2e6278;
  padding: 7px 13px 7px 10px;
}


.day2-button {
  border: #000000 solid 0px;
}
.day2-button li {
  display: inline;
  list-style: none;
  padding-right: 0px;
  padding-bottom: 5px;
}

.day2-button li a {
  background: transparent url(../images/day-lft.jpg) no-repeat left;
  color: #2e6278;
  height: 25px;
  font-size: 11px !important;
  font-weight: bold;
  padding: 7px 0 7px 0px;
}
.day2-button li a span {
  background: transparent url(../images/day-rt.jpg) no-repeat center right;
  color: #2e6278;
  padding: 7px 13px 7px 10px;
}

.day3-button {
  border: #000000 solid 0px;
}
.day3-button li {
  display: inline;
  list-style: none;
  padding-right: 0px;
  padding-bottom: 5px;
}

.day3-button li a {
  background: transparent url(../images/day-lft.jpg) no-repeat left;
  color: #2e6278;
  height: 25px;
  font-size: 11px !important;
  font-weight: bold;
  padding: 7px 0 7px 0px;
}
.day3-button li a span {
  background: transparent url(../images/day-rt.jpg) no-repeat center right;
  color: #2e6278;
  padding: 7px 13px 7px 10px;
}








.head-wrapper {
  float: left;
  width: 948px;
  height: 40px;
}
.rt-fit {
  float: right;
  font: Arial, Helvetica, sans-serif !important;
  font-size: 15px !important;
  padding: 0px;
  margin: 0px;
  width: 430px;
}
.head-wrapper .head-rep {
  float: left;
  width: 924px;
  height: 40px;
  background: url(../images/head-mid-bg.gif) left top repeat-x;
}
/* ... */

